create: validation & newsletter

--- a/index.html
+++ b/index.html
@@ -156,51 +156,56 @@
     <section class="recommended">
       <div class="recommended__backcolor"></div>
       <div class="container">
-        <div class="article">
-          <a href="#" class="article-card">
-            <span class="article__title"
-              >25 Songs That Tell Us Where Music Is Going</span
-            >
-            <img
-              src="img/recommended/article-1.png"
-              alt="article 1"
-              class="article__img"
-            />
-          </a>
-          <div class="divider"></div>
-          <a href="#" class="article-card">
-            <span class="article__title"
-              >These Ancient Assassins Eat Their Own Kind</span
-            >
-            <img
-              src="img/recommended/article-2.png"
-              alt="article 2"
-              class="article__img"
-            />
-          </a>
-          <div class="divider"></div>
-          <a href="#" class="article-card">
-            <span class="article__title"
-              >How Do You Teach People to Love Difficult Music?</span
-            >
-            <img
-              src="img/recommended/article-3.png"
-              alt="article 3"
-              class="article__img"
-            />
-          </a>
-          <div class="divider"></div>
-          <a href="#" class="article-card">
-            <span class="article__title"
-              >International Soccer’s Man of Mystery</span
-            >
-            <img
-              src="img/recommended/article-4.png"
-              alt="article 4"
-              class="article__img"
-            />
-          </a>
-        </div>
+        <ul class="article">
+          <li class="article__item">
+            <a href="#" class="article-link">
+              <span class="article__title"
+                >25 Songs That Tell Us Where Music Is Going</span
+              >
+              <img
+                src="img/recommended/article-1.png"
+                alt="article 1"
+                class="article__img"
+              />
+            </a>
+          </li>
+          <li class="article__item">
+            <a href="#" class="article-link">
+              <span class="article__title"
+                >These Ancient Assassins Eat Their Own Kind</span
+              >
+              <img
+                src="img/recommended/article-2.png"
+                alt="article 2"
+                class="article__img"
+              />
+            </a>
+          </li>
+          <li class="article__item">
+            <a href="#" class="article-link">
+              <span class="article__title"
+                >How Do You Teach People to Love Difficult Music?</span
+              >
+              <img
+                src="img/recommended/article-3.png"
+                alt="article 3"
+                class="article__img"
+              />
+            </a>
+          </li>
+          <li class="article__item">
+            <a href="#" class="article-link">
+              <span class="article__title"
+                >International Soccer’s Man of Mystery</span
+              >
+              <img
+                src="img/recommended/article-4.png"
+                alt="article 4"
+                class="article__img"
+              />
+            </a>
+          </li>
+        </ul>
         <!-- /.articles -->
 
         <div class="selection">
@@ -215,7 +220,7 @@
                 <a href="#">
                   <img
                     src="img/recommended/avatar.png"
-                    alt=""
+                    alt="avatar"
                     class="content__author__avatar"
                   />
                 </a>
@@ -264,6 +269,38 @@
                 src="img/recommended/cars.jpg"
                 alt="cars"
               />
+              <div class="content__author">
+                <a href="#">
+                  <img
+                    src="img/article-travel/comment-1.png"
+                    alt="avatar"
+                    class="content__author__avatar"
+                  />
+                </a>
+                <a href="#" class="content__author-name">
+                  By Ryan Hall
+                  <span class="content__job">Traveler</span>
+                </a>
+              </div>
+              <div class="content-info">
+                <span class="content-info__category">CARS</span>
+                <h2 class="content-info__title">
+                  <a href="#" class="content-info__link"
+                    >Storm Has Car Dealers Doing Swift Business</a
+                  >
+                </h2>
+
+                <div class="button-block">
+                  <button class="button content__button">
+                    <span class="button__text">Read more</span>
+                    <img
+                      src="img/recommended/Arrow.svg"
+                      alt="Icon: arrow"
+                      class="button__img"
+                    />
+                  </button>
+                </div>
+              </div>
             </li>
 
             <li class="content__item" id="movies">
@@ -273,14 +310,36 @@
                 alt="movies"
               />
               <div class="content__author">
-                <img
-                  src="img/recommended/avatar.png"
-                  alt=""
-                  class="content__author__avatar"
-                />
-                <div class="content__author-name">
-                  By Benjamin Turner
-                  <span class="content__job">Traveler</span>
+                <a href="#">
+                  <img
+                    src="img/article-travel/comment-2.png"
+                    alt="avatar"
+                    class="content__author__avatar"
+                  />
+                </a>
+                <a href="#" class="content__author-name">
+                  By Lora Morrow
+                  <span class="content__job">Coacher</span>
+                </a>
+              </div>
+              <div class="content-info">
+                <span class="content-info__category">MOVIES</span>
+                <h2 class="content-info__title">
+                  <a href="#" class="content-info__link"
+                    >War Is Hell? In New Military Dramas, It’s
+                    One-Dimensional</a
+                  >
+                </h2>
+
+                <div class="button-block">
+                  <button class="button content__button">
+                    <span class="button__text">Read more</span>
+                    <img
+                      src="img/recommended/Arrow.svg"
+                      alt="Icon: arrow"
+                      class="button__img"
+                    />
+                  </button>
                 </div>
               </div>
             </li>
@@ -291,10 +350,25 @@
                 src="img/recommended/nfl.jpg"
                 alt="nfl player"
               />
+              <div class="content__author">
+                <a href="#">
+                  <img
+                    src="img/article-travel/comment-3.png"
+                    alt="avatar"
+                    class="content__author__avatar"
+                  />
+                </a>
+                <a href="#" class="content__author-name">
+                  By Tara Stark
+                  <span class="content__job">Photographer</span>
+                </a>
+              </div>
               <div class="content-info">
-                <span class="content-info__category">Destinations</span>
+                <span class="content-info__category">NFL</span>
                 <h2 class="content-info__title">
-                  11 surprising stat rankings for active NFL players
+                  <a href="#" class="content-info__link"
+                    >11 surprising stat rankings for active NFL players</a
+                  >
                 </h2>
 
                 <div class="button-block">
@@ -331,13 +405,32 @@
               />
               <div class="content__author">
                 <img
-                  src="img/recommended/avatar.png"
-                  alt=""
+                  src="img/infobox/columns-avatar-1.png"
+                  alt="avatar"
                   class="content__author__avatar"
                 />
                 <div class="content__author-name">
-                  By Benjamin Turner
-                  <span class="content__job">Traveler</span>
+                  By David Williams
+                  <span class="content__job">Photographer</span>
+                </div>
+              </div>
+              <div class="content-info">
+                <span class="content-info__category">TECH</span>
+                <h2 class="content-info__title">
+                  <a href="#" class="content-info__link"
+                    >The bookcases you can buy online and assemble yourself</a
+                  >
+                </h2>
+
+                <div class="button-block">
+                  <button class="button content__button">
+                    <span class="button__text">Read more</span>
+                    <img
+                      src="img/recommended/Arrow.svg"
+                      alt="Icon: arrow"
+                      class="button__img"
+                    />
+                  </button>
                 </div>
               </div>
             </li>
@@ -350,9 +443,11 @@
               <span class="tabs-item__title tabs-item__title-bluegreen75"
                 >Food</span
               >
-              <p class="tabs-item__text tabs-item__text-video">
+              <p class="tabs-item__text">
                 For Chicken-Fried Steak, Too Much Is Just Enough
+                <span class="tabs-item__text-video"></span>
               </p>
+
               <div
                 class="tabs-item__triangle tabs-item__triangle--active"
               ></div>
@@ -382,8 +477,9 @@
               <span class="tabs-item__title tabs-item__title-orange75"
                 >NFL</span
               >
-              <p class="tabs-item__text tabs-item__text-video">
+              <p class="tabs-item__text">
                 11 surprising stat rankings for active NFL players
+                <span class="tabs-item__text-video"></span>
               </p>
               <div class="tabs-item__triangle"></div>
             </li>
@@ -409,7 +505,7 @@
     <section class="infobox">
       <div class="container">
         <div class="infobox-wrapper">
-          <div class="infobox__cars infobox-cars">
+          <div class="infobox__cars infobox-cars infobox-card">
             <div class="infobox-cars__info">
               <span class="infobox__category">Cars</span>
               <h3 class="infobox-title">
@@ -453,7 +549,7 @@
           </div>
           <!-- /.infobox__cars -->
 
-          <div class="infobox__art infobox-art">
+          <div class="infobox__art infobox-art infobox-card">
             <div class="popular">Popular</div>
             <img
               src="img/infobox/art.png"
@@ -500,14 +596,14 @@
             <!-- /.infobox-art__footer -->
           </div>
           <!-- /.infobox__art -->
-          <div class="infobox__cat infobox-cat">
+          <div class="infobox__cat infobox-cat infobox-card">
             <img src="img/infobox/cat.png" alt="cat" class="infobox-cat__img" />
             <a href="#" class="infobox-cat__title"
               >200+ Doomed Cats Saved From Euthanization</a
             >
           </div>
           <!-- /.infobox__cat -->
-          <div class="infobox-item infobox__coffee">
+          <div class="infobox-item infobox__coffee infobox-card">
             <a href="#" class="infobox-item__title">Is Coffee Bad for Bones?</a>
             <p class="infobox-item__text">
               Coffee drinkers may excrete more calcium, but it doesn’t appear to
@@ -516,7 +612,7 @@
             <span class="infobox-item__date">Oct 15</span>
           </div>
           <!-- /.infobox__coffee -->
-          <div class="infobox-item infobox__stressful">
+          <div class="infobox-item infobox__stressful infobox-card">
             <a href="#" class="infobox-item__title">It’s a Stressful World</a>
             <p class="infobox-item__text">
               Can a cruise skeptic enjoy four days on the seas with his family
@@ -526,7 +622,7 @@
           </div>
           <!-- /.infobox__stressful -->
 
-          <div class="infobox-item infobox__manufacture">
+          <div class="infobox-item infobox__manufacture infobox-card">
             <a href="#" class="infobox-item__title">What We Manufacture</a>
             <p class="infobox-item__text">
               A global history of the factory and the modern world that all
@@ -536,7 +632,7 @@
           </div>
           <!-- /.infobox__manufacture -->
 
-          <div class="infobox-item infobox__lemon">
+          <div class="infobox-item infobox__lemon infobox-card">
             <a href="#" class="infobox-item__title">A Treat for Lemon Lovers</a>
             <p class="infobox-item__text">
               This tangerine, ginger and chocolate tart has verve, depth and a
@@ -824,7 +920,9 @@
                   class="bookmark"
                 />
               </div>
-              <span class="list-item__category list-item__category-red75">Science</span>
+              <span class="list-item__category list-item__category-red75"
+                >Science</span
+              >
               <h3 class="list-item__title">
                 <a href="#" class="list-item__title-link">
                   Forests Protect the Climate. A Future With More Storms Would
@@ -1004,8 +1102,8 @@
               <span class="page-column__number">7</span>
             </div>
           </li>
-          <li class="page-column-footer">
-            <span class="page-column__footer">Read more</span>
+          <li class="page-column__footer">
+            <a href="#" class="page-column__footer-link">Read more</a>
           </li>
         </ul>
         <!-- /.column -->
@@ -1214,14 +1312,20 @@
     <section class="subscribe">
       <div class="container subscribe-wrapper">
         <h2 class="subscribe__title">Subscribe now and get 20% off</h2>
-        <form action="send.php" method="POST" class="subscribe-form form">
-          <input
-            type="email"
-            class="subscribe__input"
-            placeholder="Enter your email"
-            name="email"
-            required
-          />
+        <form
+          action="send.php"
+          method="POST"
+          class="subscribe subscribe-form form"
+        >
+          <div class="input-group">
+            <input
+              type="email"
+              class="subscribe__input"
+              placeholder="Enter your email"
+              name="email"
+              required
+            />
+          </div>
           <button class="subscribe__button button" type="submit">
             Subscribe
           </button>
@@ -1230,6 +1334,7 @@
       <!-- /.container -->
     </section>
     <!-- /.subscribe -->
+
     <footer class="footer">
       <div class="container">
         <div class="footer-menu">
@@ -1423,6 +1528,7 @@
     <!-- /.modal -->
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
