create: adapt section hot

--- a/index.html
+++ b/index.html
@@ -650,15 +650,17 @@
                 Architecture is the thoughtful making of space
               </a>
               <div class="infobox-columns__author author">
-                <img
-                  src="img/infobox/columns-avatar-1.png"
-                  alt="avatar-1"
-                  class="infobox-columns__avatar"
-                />
-                <div class="author__info">
+                <a href="#">
+                  <img
+                    src="img/infobox/columns-avatar-1.png"
+                    alt="avatar-1"
+                    class="infobox-columns__avatar"
+                  />
+                </a>
+                <a href="#" class="author__info">
                   <span class="infobox-columns__name">David Williams</span>
                   <span class="infobox-columns__job">Architect</span>
-                </div>
+                </a>
               </div>
             </div>
 
@@ -667,15 +669,17 @@
                 The details are not the details. They make the design.
               </a>
               <div class="infobox-columns__author author">
-                <img
-                  src="img/infobox/columns-avatar-2.png"
-                  alt="avatar-2"
-                  class="infobox-columns__avatar"
-                />
-                <div class="author__info">
+                <a href="#">
+                  <img
+                    src="img/infobox/columns-avatar-2.png"
+                    alt="avatar-2"
+                    class="infobox-columns__avatar"
+                  />
+                </a>
+                <a href="#" class="author__info">
                   <span class="infobox-columns__name">Alexandra Green</span>
                   <span class="infobox-columns__job">Interior designer</span>
-                </div>
+                </a>
               </div>
             </div>
 
@@ -686,15 +690,17 @@
                 Live life to the fullest, and focus on the positive
               </a>
               <div class="infobox-columns__author author">
-                <img
-                  src="img/infobox/columns-avatar-3.png"
-                  alt="avatar-3"
-                  class="infobox-columns__avatar"
-                />
-                <div class="author__info">
+                <a href="#">
+                  <img
+                    src="img/infobox/columns-avatar-3.png"
+                    alt="avatar-3"
+                    class="infobox-columns__avatar"
+                  />
+                </a>
+                <a href="#" class="author__info">
                   <span class="infobox-columns__name">Olivia Thompson</span>
                   <span class="infobox-columns__job">Coacher</span>
-                </div>
+                </a>
               </div>
             </div>
             <div class="infobox-columns__right"></div>
@@ -1129,11 +1135,13 @@
                   />
                   <div class="hot__pin">Hot</div>
                   <div class="hot-slider__info">
-                    <img
-                      src="img/hot/slider-img.png"
-                      alt="avatar"
-                      class="hot-slider__avatar"
-                    />
+                    <a href="#" class="hot-slider__info-img">
+                      <img
+                        src="img/hot/slider-img.png"
+                        alt="avatar"
+                        class="hot-slider__avatar"
+                      />
+                    </a>
                     <div class="hot-slider__author">
                       <a href="#" class="hot-slider__name">By Sarah Jenkins</a>
                       <span class="hot-slider__job">Photographer</span>
@@ -1147,10 +1155,10 @@
                       <img
                         src="img/hot/Images.svg"
                         alt="Icon: images"
-                        class="button__img"
+                        class="hot-button__img"
                       />
-                      <span class="button__text">Watch photos</span>
-                      <span class="button__number">26</span>
+                      <span class="hot-button__text">Watch photos</span>
+                      <span class="hot-button__number">26</span>
                     </button>
                   </div>
                 </div>
@@ -1161,11 +1169,13 @@
                     class="hot-slider__img"
                   />
                   <div class="hot-slider__info">
-                    <img
-                      src="img/hot/slider-img.png"
-                      alt="avatar"
-                      class="hot-slider__avatar"
-                    />
+                    <a href="#" class="hot-slider__info-img">
+                      <img
+                        src="img/hot/slider-img.png"
+                        alt="avatar"
+                        class="hot-slider__avatar"
+                      />
+                    </a>
                     <div class="hot-slider__author">
                       <a href="#" class="hot-slider__name">By Sarah Jenkins</a>
                       <span class="hot-slider__job">Photographer</span>
@@ -1179,10 +1189,10 @@
                       <img
                         src="img/hot/Images.svg"
                         alt="Icon: images"
-                        class="button__img"
+                        class="hot-button__img"
                       />
-                      <span class="button__text">Watch photos</span>
-                      <span class="button__number">26</span>
+                      <span class="hot-button__text">Watch photos</span>
+                      <span class="hot-button__number">26</span>
                     </button>
                   </div>
                 </div>
@@ -1193,11 +1203,13 @@
                     class="hot-slider__img"
                   />
                   <div class="hot-slider__info">
-                    <img
-                      src="img/hot/slider-img.png"
-                      alt="avatar"
-                      class="hot-slider__avatar"
-                    />
+                    <a href="#" class="hot-slider__info-img">
+                      <img
+                        src="img/hot/slider-img.png"
+                        alt="avatar"
+                        class="hot-slider__avatar"
+                      />
+                    </a>
                     <div class="hot-slider__author">
                       <a href="#" class="hot-slider__name">By Sarah Jenkins</a>
                       <span class="hot-slider__job">Photographer</span>
@@ -1211,10 +1223,10 @@
                       <img
                         src="img/hot/Images.svg"
                         alt="Icon: images"
-                        class="button__img"
+                        class="hot-button__img"
                       />
-                      <span class="button__text">Watch photos</span>
-                      <span class="button__number">26</span>
+                      <span class="hot-button__text">Watch photos</span>
+                      <span class="hot-button__number">26</span>
                     </button>
                   </div>
                 </div>
@@ -1225,11 +1237,13 @@
                     class="hot-slider__img"
                   />
                   <div class="hot-slider__info">
-                    <img
-                      src="img/hot/slider-img.png"
-                      alt="avatar"
-                      class="hot-slider__avatar"
-                    />
+                    <a href="#" class="hot-slider__info-img">
+                      <img
+                        src="img/hot/slider-img.png"
+                        alt="avatar"
+                        class="hot-slider__avatar"
+                      />
+                    </a>
                     <div class="hot-slider__author">
                       <a href="#" class="hot-slider__name">By Sarah Jenkins</a>
                       <span class="hot-slider__job">Photographer</span>
@@ -1243,10 +1257,10 @@
                       <img
                         src="img/hot/Images.svg"
                         alt="Icon: images"
-                        class="button__img"
+                        class="hot-button__img"
                       />
-                      <span class="button__text">Watch photos</span>
-                      <span class="button__number">26</span>
+                      <span class="hot-button__text">Watch photos</span>
+                      <span class="hot-button__number">26</span>
                     </button>
                   </div>
                 </div>
