--- a/thankyou.html
+++ b/thankyou.html
@@ -153,8 +153,15 @@
     </header>
     <!-- /.header -->
 
-    <h1>Thank you!</h1>
-    <a href="index.html" class="return">Return</a>
+    <div class="subscribe">
+      <div class="container">
+        <h1 class="text__title">Hello!</h1>
+        <p class="text__p">
+          Thanks for subscribing to our newsletter! A welcome letter has been
+          sent to your email address.
+        </p>
+      </div>
+    </div>
 
     <footer class="footer">
       <div class="container">
