--- a/travel.html
+++ b/travel.html
@@ -160,6 +160,7 @@
         alt="background image"
         class="main__img"
       />
+
       <div class="main-container">
         <div class="main-info">
           <div class="bookmark-container">
@@ -275,8 +276,8 @@
             <p class="text__p">
               any geographers are trained in toponymy and cartology, this
               is not their main preoccupation. Geographers study the space
-              and the temporal database distribution of phenomena, processes, and
-              features as well as the interaction of humans and their
+              and the temporal database distribution of phenomena, processes,
+              and features as well as the interaction of humans and their
               environment. Because space and place affect a variety of topics,
               such as economics, health, climate, plants and animals, geography
               is highly interdisciplinary. The interdisciplinary nature of the
