--- a/index.html
+++ b/index.html
@@ -238,7 +238,10 @@
                 </h2>
 
                 <div class="button-block">
-                  <button class="button content__button">
+                  <button
+                    class="button content__button"
+                    onclick="location.href='travel.html'"
+                  >
                     <span class="button__text">Read more</span>
                     <img
                       src="img/recommended/Arrow.svg"
@@ -291,7 +294,10 @@
                 </h2>
 
                 <div class="button-block">
-                  <button class="button content__button">
+                  <button
+                    class="button content__button"
+                    onclick="location.href='travel.html'"
+                  >
                     <span class="button__text">Read more</span>
                     <img
                       src="img/recommended/Arrow.svg"
@@ -332,7 +338,10 @@
                 </h2>
 
                 <div class="button-block">
-                  <button class="button content__button">
+                  <button
+                    class="button content__button"
+                    onclick="location.href='travel.html'"
+                  >
                     <span class="button__text">Read more</span>
                     <img
                       src="img/recommended/Arrow.svg"
@@ -372,7 +381,10 @@
                 </h2>
 
                 <div class="button-block">
-                  <button class="button content__button">
+                  <button
+                    class="button content__button"
+                    onclick="location.href='travel.html'"
+                  >
                     <span class="button__text">Read more</span>
                     <img
                       src="img/recommended/Arrow.svg"
@@ -423,7 +435,10 @@
                 </h2>
 
                 <div class="button-block">
-                  <button class="button content__button">
+                  <button
+                    class="button content__button"
+                    onclick="location.href='travel.html'"
+                  >
                     <span class="button__text">Read more</span>
                     <img
                       src="img/recommended/Arrow.svg"
@@ -725,7 +740,10 @@
           The Big Bloom or «How Flowering<br />
           Plants Changed the World»
         </h2>
-        <button class="button flowering-button">
+        <button
+          class="button flowering-button"
+          onclick="location.href='nextPage.html'"
+        >
           <span class="button__text">Read more</span>
           <img
             src="img/recommended/Arrow.svg"
@@ -1127,7 +1145,7 @@
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide">
+                <div class="swiper-slide hot-slide">
                   <img
                     src="img/hot/slide-1.png"
                     alt="slide 1"
@@ -1162,7 +1180,7 @@
                     </button>
                   </div>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide hot-slide">
                   <img
                     src="img/hot/slide-2.jpg"
                     alt="slide 2"
@@ -1196,7 +1214,7 @@
                     </button>
                   </div>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide hot-slide">
                   <img
                     src="img/hot/slide-3.jpg"
                     alt="slide 3"
@@ -1230,7 +1248,7 @@
                     </button>
                   </div>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide hot-slide">
                   <img
                     src="img/hot/slide-4.jpg"
                     alt="slide 4"
@@ -1288,7 +1306,10 @@
                 Try to understand the culture of the company where you want to
                 work and be authentic in your interview, experts emphasize
               </p>
-              <button class="button hot-button">
+              <button
+                class="button hot-button"
+                onclick="location.href='travel.html'"
+              >
                 <span class="button__text">Read more</span>
                 <img
                   src="img/recommended/Arrow.svg"
@@ -1334,12 +1355,13 @@
           <div class="input-group">
             <input
               type="text"
-              class="subscribe__input .email"
+              class="subscribe__input email"
               id="email"
               placeholder="Enter your email"
               name="email"
               required
             />
+            <span class="error"></span>
           </div>
           <button class="subscribe__button button" type="submit">
             Subscribe
@@ -1551,7 +1573,7 @@
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
-    <script src="js/inputmask.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
