--- a/travel.html
+++ b/travel.html
@@ -375,15 +375,17 @@
                 the application of statistical methodology
               </div>
               <div class="article-photo__author">
-                <img
-                  src="img/article-travel/slide-avatar.png"
-                  alt="avatar"
-                  class="article-photo__avatar"
-                />
-                <div class="article-photo__info">
+                <a href="#" class="article-photo__author-link">
+                  <img
+                    src="img/article-travel/slide-avatar.png"
+                    alt="avatar"
+                    class="article-photo__avatar"
+                  />
+                </a>
+                <a href="#" class="article-photo__info">
                   <span class="article-photo__name">Andrew Washington</span>
                   <span class="article-photo__job">Photographer</span>
-                </div>
+                </a>
               </div>
             </div>
             <!-- /.article-slider__bottom -->
@@ -407,6 +409,31 @@
               surrounded by a "bitter river" (Oceanus), with seven islands
               arranged around it so as to form a seven-pointed star.
             </p>
+            <div class="aside-column aside__column">
+              <h4 class="aside-column__title">Material on Theme</h4>
+              <a href="#" class="aside-column__link-img"><img src="img/article-travel/aside.png" alt="aside image"
+                  class="aside-column__img" />
+                <h5 class="aside-column__info">
+                  Application of Postcolonial Theory in the Middle East
+                </h5>
+                <p class="aside-column__text">
+                  In the essays "Overstating the Arab State", by Nazih Ayubi,
+                  and "Is Jordan Palestine?", by Raphael Israel, the authors
+                  deal with the psychologically fragmented postcolonial
+                  identity.
+                </p>
+              </a>
+              <div class="aside-column__counters">
+                <a href="#" class="aside-column__counters-view">
+                  <img src="img/article-travel/Eye.svg" alt="Icon: view" class="aside-column__counters-img" />
+                  <span class="aside-column__counters-number">1.623</span>
+                </a>
+                <a href="#" class="aside-column__counters-comment">
+                  <img src="img/infobox/comment.svg" alt="Icon: comment" class="aside-column__counters-img" />
+                  <span class="aside-column__counters-number">102</span>
+                </a>
+              </div>
+            </div>
             <p class="aside__p text__p">
               The accompanying text mentions seven outer regions beyond the
               encircling ocean. The descriptions of five of them have survived.
@@ -415,6 +442,7 @@
               further north from the center of the world, though it is not
               certain what that center was supposed to represent.
             </p>
+           
             <p class="aside__p text__p">
               The ideas of Anaximander: considered by later Greek writers to be
               the true founder of geography, come to us through fragments quoted
@@ -427,40 +455,6 @@
             </p>
           </div>
           <!-- /.aside-text -->
-          <div class="aside-column aside__column">
-            <h4 class="aside-column__title">Material on Theme</h4>
-            <img
-              src="img/article-travel/aside.png"
-              alt="aside image"
-              class="aside-column__img"
-            />
-            <h5 class="aside-column__info">
-              Application of Postcolonial Theory in the Middle East
-            </h5>
-            <p class="aside-column__text">
-              In the essays "Overstating the Arab State", by Nazih Ayubi, and
-              "Is Jordan Palestine?", by Raphael Israel, the authors deal with
-              the psychologically fragmented postcolonial identity.
-            </p>
-            <div class="aside-column__counters">
-              <div class="aside-column__counters-view">
-                <img
-                  src="img/article-travel/Eye.svg"
-                  alt="Icon: view"
-                  class="aside-column__counters-img"
-                />
-                <span class="aside-column__counters-number">1.623</span>
-              </div>
-              <div class="aside-column__counters-comment">
-                <img
-                  src="img/infobox/comment.svg"
-                  alt="Icon: comment"
-                  class="aside-column__counters-img"
-                />
-                <span class="aside-column__counters-number">102</span>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -477,7 +471,7 @@
                 a geographer. Geography has higher aims than this: it seeks to
                 classify phenomena.
               </h3>
-              <div class="block-quote__author">
+              <a href="#" class="block-quote__author">
                 <img
                   src="img/article-travel/quote-avatar.png"
                   alt="avatar"
@@ -485,7 +479,7 @@
                 />
                 <span class="block-quote__name">William Peterson</span>
                 <span class="block-quote__job">Travel Agent</span>
-              </div>
+              </a>
             </div>
             <p class="article-quote__text text__p">
               The Greeks, who were the first to explore geography as both art
@@ -1080,7 +1074,7 @@
                     id="message"
                     class="textarea submit__textarea"
                     minlength="100"
-                  ></textarea>                  
+                  ></textarea>
                 </div>
               </div>
               <button class="button submit__button" type="submit">
