create: adapt section article-gallery

--- a/travel.html
+++ b/travel.html
@@ -411,8 +411,12 @@
             </p>
             <div class="aside-column aside__column">
               <h4 class="aside-column__title">Material on Theme</h4>
-              <a href="#" class="aside-column__link-img"><img src="img/article-travel/aside.png" alt="aside image"
-                  class="aside-column__img" />
+              <a href="#" class="aside-column__link-img"
+                ><img
+                  src="img/article-travel/aside.png"
+                  alt="aside image"
+                  class="aside-column__img"
+                />
                 <h5 class="aside-column__info">
                   Application of Postcolonial Theory in the Middle East
                 </h5>
@@ -425,11 +429,19 @@
               </a>
               <div class="aside-column__counters">
                 <a href="#" class="aside-column__counters-view">
-                  <img src="img/article-travel/Eye.svg" alt="Icon: view" class="aside-column__counters-img" />
+                  <img
+                    src="img/article-travel/Eye.svg"
+                    alt="Icon: view"
+                    class="aside-column__counters-img"
+                  />
                   <span class="aside-column__counters-number">1.623</span>
                 </a>
                 <a href="#" class="aside-column__counters-comment">
-                  <img src="img/infobox/comment.svg" alt="Icon: comment" class="aside-column__counters-img" />
+                  <img
+                    src="img/infobox/comment.svg"
+                    alt="Icon: comment"
+                    class="aside-column__counters-img"
+                  />
                   <span class="aside-column__counters-number">102</span>
                 </a>
               </div>
@@ -442,7 +454,7 @@
               further north from the center of the world, though it is not
               certain what that center was supposed to represent.
             </p>
-           
+
             <p class="aside__p text__p">
               The ideas of Anaximander: considered by later Greek writers to be
               the true founder of geography, come to us through fragments quoted
@@ -497,11 +509,11 @@
               derived from Babylonian mathematics.
             </p>
             <div class="article-quote__blocks">
-              <span class="article-quote__blocks-item">Travel</span>
-              <span class="article-quote__blocks-item">Destinations</span>
-              <span class="article-quote__blocks-item">Nature</span>
-              <span class="article-quote__blocks-item">World</span>
-              <span class="article-quote__blocks-item">Alaska</span>
+              <a href="#" class="article-quote__blocks-item">Travel</a>
+              <a href="#" class="article-quote__blocks-item">Destinations</a>
+              <a href="#" class="article-quote__blocks-item">Nature</a>
+              <a href="#" class="article-quote__blocks-item">World</a>
+              <a href="#" class="article-quote__blocks-item">Alaska</a>
             </div>
           </div>
           <!-- /.text-container -->
@@ -1074,6 +1086,7 @@
                     id="message"
                     class="textarea submit__textarea"
                     minlength="100"
+                    required
                   ></textarea>
                 </div>
               </div>
