create: adapt section comment

--- a/travel.html
+++ b/travel.html
@@ -489,8 +489,10 @@
                   alt="avatar"
                   class="block-quote__avatar"
                 />
-                <span class="block-quote__name">William Peterson</span>
-                <span class="block-quote__job">Travel Agent</span>
+                <span class="block-quote__author-info">
+                  <span class="block-quote__name">William Peterson</span>
+                  <span class="block-quote__job">Travel Agent</span>
+                </span>
               </a>
             </div>
             <p class="article-quote__text text__p">
@@ -1080,7 +1082,7 @@
                   alt="avatar"
                   class="submit__avatar"
                 />
-                <div class="submit-input__block">
+                
                   <textarea
                     name="message"
                     id="message"
@@ -1088,7 +1090,7 @@
                     minlength="100"
                     required
                   ></textarea>
-                </div>
+                
               </div>
               <button class="button submit__button" type="submit">
                 <span class="submit-button__text">Submit</span>
